--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   image_picker: ^0.8.6+1
   intl_phone_number_input: ^0.7.2
+  http: ^0.13.5
+  toast: ^0.3.0
   
 
 
