Font-end au niveau de CompteVue déjà

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mno.moble.app.african_ap">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="african_ap"
+        android:label="AfricanAp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
