--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,15 +32,20 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.6+1
-  intl_phone_number_input: ^0.7.2
+  intl_phone_number_input: ^0.7.1
   http: ^0.13.5
+  file_picker: ^4.1.6
+  dio: ^4.0.6
+  google_sign_in: ^5.0.3
+  shared_preferences: ^2.0.17
   toast: ^0.3.0
-  
-
-
+  video_player: ^2.5.1
+  introduction_slider: ^2.0.1
+  grouped_list: ^5.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
+  
 
 dev_dependencies:
   flutter_test:
