--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   video_player: ^2.5.1
   introduction_slider: ^2.0.1
   grouped_list: ^5.1.2
+  intl: ^0.18.0
+  animated_splash_screen: ^1.3.0
+  lottie: ^2.0.0
+  google_fonts: ^3.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
@@ -72,7 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - img/
-  #   - images/a_dot_ham.jpeg
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
