--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,13 @@ dependencies:
   animated_splash_screen: ^1.3.0
   lottie: ^2.0.0
   google_fonts: ^3.0.1
+  contacts_service: ^0.6.3
+  permission_handler: ^10.2.0
+  flutter_screenutil: ^5.6.1
+  url_launcher: ^6.1.7
+  font_awesome_flutter: ^10.2.1
+  chewie: ^1.3.6
+  # chewie: ^1.4.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
