--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   url_launcher: ^6.1.7
   font_awesome_flutter: ^10.2.1
   chewie: ^1.3.6
+  adobe_xd: ^2.0.1
+  # nb_utils: ^5.0.6
   # chewie: ^1.4.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
