--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   video_player: ^2.5.1
   introduction_slider: ^2.0.1
   grouped_list: ^5.1.2
-  intl: ^0.18.0
+  intl: ^0.17.0
   animated_splash_screen: ^1.3.0
   lottie: ^2.0.0
   google_fonts: ^3.0.1
@@ -52,7 +52,13 @@ dependencies:
   url_launcher: ^6.1.7
   font_awesome_flutter: ^10.2.1
   chewie: ^1.3.6
-  adobe_xd: ^2.0.1
+  # adobe_xd: ^2.0.1
+  firebase_auth: ^4.4.2
+  firebase_core: ^2.10.0
+  firebase_storage: ^11.1.1
+  cloud_firestore: ^4.5.2
+  get:
+  
   # nb_utils: ^5.0.6
   # chewie: ^1.4.0
   # The following adds the Cupertino Icons font to your application.
