--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
   firebase_storage: ^11.1.1
-  cloud_firestore: ^4.5.2
+  cloud_firestore:
   get:
   flutter_local_notifications: ^12.0.4
   nb_utils: 
